[package]
name = "poly"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
async-std = {version = "1.12.0", features = ["attributes", "tokio1"]}
clap = { version = "4.3.19", features = ["derive"] }
encoding_rs = "0.8.32"
encoding_rs_io = "0.1.7"
http = "0.2.9"
octocrab = "0.29.1"
walkdir = "2.3.3"
